@@ -2,11 +2,11 @@ package io.quarkus.maven;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Properties;
 
 import org.apache.maven.AbstractMavenLifecycleParticipant;
 import org.apache.maven.execution.MavenSession;
@@ -135,7 +135,18 @@ public abstract class QuarkusBootstrapMojo extends AbstractMojo {
      * The context of the execution of the plugin.
      */
     @Parameter(defaultValue = "${mojoExecution}", readonly = true, required = true)
-    private MojoExecution mojoExecution;
+    MojoExecution mojoExecution;
+
+    /**
+     * Application bootstrap provider ID. This parameter is not supposed to be configured by the user.
+     * To be able to re-use an application bootstrapped in one phase in a later phase, there needs to be a way
+     * to identify the correct instance of the bootstrapped application (in case there are more than one) in each Mojo.
+     * A bootstrap ID serves this purpose. This parameter is is set in {@link DevMojo} invoking {@code generate-code}
+     * and {@code generate-code-tests} goals. If this parameter is not configured, a Mojo execution ID will be used
+     * as the bootstrap ID.
+     */
+    @Parameter(required = false)
+    String bootstrapId;
 
     /**
      * Whether to close the bootstrapped applications after the execution
@@ -160,7 +171,12 @@ public abstract class QuarkusBootstrapMojo extends AbstractMojo {
                 if (closeBootstrappedApp) {
                     bootstrapProvider.bootstrapper(this).close();
                 }
-            } else if (!bootstrapSessionListener.isEnabled()) {
+            } else if (!bootstrapSessionListener.isEnabled()
+                    // we may end up here when running 'compile quarkus:dev'
+                    // even if the session listener is disabled we still don't want to close the provider
+                    // because there might have been a Maven profile activated which we won't take into account
+                    // when re-bootstrapping in DevMojo
+                    && !mavenSession().getGoals().contains("quarkus:dev")) {
                 bootstrapProvider.bootstrapper(this).close();
             }
         }
@@ -201,13 +217,15 @@ public abstract class QuarkusBootstrapMojo extends AbstractMojo {
      * @return list of extra dependencies that should be enforced on the application
      */
     protected List<Dependency> forcedDependencies(LaunchMode mode) {
-        return Collections.emptyList();
+        return List.of();
     }
 
+    @Deprecated(forRemoval = true)
     protected RepositorySystem repositorySystem() {
         return bootstrapProvider.repositorySystem();
     }
 
+    @Deprecated(forRemoval = true)
     protected RemoteRepositoryManager remoteRepositoryManager() {
         return bootstrapProvider.remoteRepositoryManager();
     }
@@ -256,8 +274,8 @@ public abstract class QuarkusBootstrapMojo extends AbstractMojo {
         return properties;
     }
 
-    protected String executionId() {
-        return mojoExecution.getExecutionId();
+    protected String bootstrapId() {
+        return bootstrapId == null ? mojoExecution.getExecutionId() : bootstrapId;
     }
 
     protected ArtifactKey projectId() {
@@ -270,5 +288,9 @@ public abstract class QuarkusBootstrapMojo extends AbstractMojo {
 
     protected CuratedApplication bootstrapApplication(LaunchMode mode) throws MojoExecutionException {
         return bootstrapProvider.bootstrapApplication(this, mode);
+    }
+
+    protected Properties getBuildSystemProperties(boolean quarkusOnly) throws MojoExecutionException {
+        return bootstrapProvider.bootstrapper(this).getBuildSystemProperties(this, quarkusOnly);
     }
 }
